@startuml

title __CONTROLLER's Class Diagram__\n

  package  {
    package cestovnydennik {
      package cestovnydennik.controller {
        class Controller {
            + hello()
            + allTravelRecords()
            + addTravelRecord()
            + deleteTravelRecord()
        }
      }
    }
  }
  

  package  {
    package cestovnydennik {
      package cestovnydennik.controller {
        class MainController {
            + home()
            + add()
            + save()
            + edit()
            + deleteRecord()
        }
      }
    }
  }
  

  Controller o-- TravelRecordService : travelRecordService
  MainController o-- TravelRecordService : travelRecordService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
